--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ DelayedDealloc.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.pli
 *.xcuserstate
 *.xcworkspacedata
 DelayedDealloc.xcodeproj/xcuserdata/patrick.xcuserdatad/xcschemes/xcschememanagement.plist
+.DS_Store
+DelayedDealloc.xcodeproj/xcuserdata/championchen.xcuserdatad/xcschemes/xcschememanagement.plist
